RESOLVED FIXED 17041
Eastern Asian fonts do not display without specific box in Control Panel
https://bugs.webkit.org/show_bug.cgi?id=17041
Summary Eastern Asian fonts do not display without specific box in Control Panel
Cameo Wood
Reported 2008-01-27 21:49:30 PST
I have not installed East Asian fonts but that you have Arial Unicode because you've installed MS Office. This page renders fine in FF and IE without EA fonts installed.
Attachments
mitz
Comment 1 2008-01-27 21:51:26 PST
mitz
Comment 2 2008-01-27 21:55:47 PST
Since the fix for bug 16548, WebKit's font fallback depend too much on the FontLink\SystemLink registry key being present. Since the "Install files for East Asian languages" is not selected in Regional and Language Options control panel, the registry key is missing, even though East Asian fonts are present on the system.
mitz
Comment 3 2008-02-12 20:10:45 PST
Note You need to log in before you can comment on or make changes to this bug.